- Prepared command helper